wordpress/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
