wordpress/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-dashboard-route
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`wordpress.k3s.com`)
      kind: Rule
      services:
        - name: wordpress
          port: 443
  tls:
    secretName: https
