wordpress/wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wordpress.li.com
    http:
      paths:
      - backend:
          serviceName: wordpress-svc
          servicePort: 80
